--- a/paper/acl-style-files/custom.bib
+++ b/paper/acl-style-files/custom.bib
@@ -1,70 +1,87 @@
-% Use this file for citations not found in the ACL Anthology (contained in "anthology.bib").
-
-@book{Aho:72,
-    author  = {Alfred V. Aho and Jeffrey D. Ullman},
-    title   = {The Theory of Parsing, Translation and Compiling},
-    year    = "1972",
-    volume  = "1",
-    publisher = {Prentice-Hall},
-    address = {Englewood Cliffs, NJ}
+@article{zakka2023almanac,
+  title={Almanac: Retrieval-Augmented Language Models for Clinical Medicine},
+  author={Zakka, Cyril and Chaurasia, Akash and Shad, Rohan and Dalal, Alex R and Kim, Jennifer L and Moor, Michael and Alexander, Kevin and Ashley, Euan and Boyd, Jack and Boyd, Kathleen and others},
+  journal={Research Square},
+  year={2023},
+  publisher={American Journal Experts}
 }
 
-@book{APA:83,
-    author  = {{American Psychological Association}},
-    title   = {Publications Manual},
-    year    = "1983",
-    publisher = {American Psychological Association},
-    address = {Washington, DC}
+@article{savelka2023explaining,
+  title={Explaining Legal Concepts with Augmented Large Language Models (GPT-4)},
+  author={Savelka, Jaromir and Ashley, Kevin D and Gray, Morgan A and Westermann, Hannes and Xu, Huihui},
+  journal={arXiv preprint arXiv:2306.09525},
+  year={2023}
 }
 
-@article{Chandra:81,
-	author = {Ashok K. Chandra and Dexter C. Kozen and Larry J. Stockmeyer},
-	year = "1981",
-	title = {Alternation},
-	journal = {Journal of the Association for Computing Machinery},
-	volume = "28",
-	number = "1",
-	pages = "114--133",
-	doi = "10.1145/322234.322243",
+@article{ram2023context,
+  title={In-context retrieval-augmented language models},
+  author={Ram, Ori and Levine, Yoav and Dalmedigos, Itay and Muhlgay, Dor and Shashua, Amnon and Leyton-Brown, Kevin and Shoham, Yoav},
+  journal={arXiv preprint arXiv:2302.00082},
+  year={2023}
 }
 
-@inproceedings{andrew2007scalable,
-  title={Scalable training of {L1}-regularized log-linear models},
-  author={Andrew, Galen and Gao, Jianfeng},
-  booktitle={Proceedings of the 24th International Conference on Machine Learning},
-  pages={33--40},
-  year={2007},
+@article{lewis2020retrieval,
+  title={Retrieval-augmented generation for knowledge-intensive nlp tasks},
+  author={Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={9459--9474},
+  year={2020}
 }
 
-@book{Gusfield:97,
-    author  = {Dan Gusfield},
-    title   = {Algorithms on Strings, Trees and Sequences},
-    year    = "1997",
-    publisher = {Cambridge University Press},
-    address = {Cambridge, UK}
+@article{chalkidis2020legal,
+  title={LEGAL-BERT: The muppets straight out of law school},
+  author={Chalkidis, Ilias and Fergadiotis, Manos and Malakasiotis, Prodromos and Aletras, Nikolaos and Androutsopoulos, Ion},
+  journal={arXiv preprint arXiv:2010.02559},
+  year={2020}
 }
 
-@article{rasooli-tetrault-2015,
-    author    = {Mohammad Sadegh Rasooli and Joel R. Tetreault},
-    title     = {Yara Parser: {A} Fast and Accurate Dependency Parser},
-    journal   = {Computing Research Repository},
-    volume    = {arXiv:1503.06733},
-    year      = {2015},
-    url       = {http://arxiv.org/abs/1503.06733},
-    note    = {version 2}
+@article{cui2023chatlaw,
+  title={Chatlaw: Open-source legal large language model with integrated external knowledge bases},
+  author={Cui, Jiaxi and Li, Zongjian and Yan, Yang and Chen, Bohua and Yuan, Li},
+  journal={arXiv preprint arXiv:2306.16092},
+  year={2023}
 }
 
-@article{Ando2005,
-	Acmid = {1194905},
-	Author = {Ando, Rie Kubota and Zhang, Tong},
-	Issn = {1532-4435},
-	Issue_Date = {12/1/2005},
-	Journal = {Journal of Machine Learning Research},
-	Month = dec,
-	Numpages = {37},
-	Pages = {1817--1853},
-	Publisher = {JMLR.org},
-	Title = {A Framework for Learning Predictive Structures from Multiple Tasks and Unlabeled Data},
-	Volume = {6},
-	Year = {2005}
+% son varios datasets/papers
+% https://github.com/HazyResearch/legalbench
+
+
+@inproceedings{chalkidis-etal-2022-lexglue,
+    title = "{L}ex{GLUE}: A Benchmark Dataset for Legal Language Understanding in {E}nglish",
+    author = "Chalkidis, Ilias  and
+      Jana, Abhik  and
+      Hartung, Dirk  and
+      Bommarito, Michael  and
+      Androutsopoulos, Ion  and
+      Katz, Daniel  and
+      Aletras, Nikolaos",
+    booktitle = "Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
+    month = may,
+    year = "2022",
+    address = "Dublin, Ireland",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.acl-long.297",
+    pages = "4310--4330",
+}
+
+@article{jiang2023mistral,
+  title={Mistral 7B},
+  author={Jiang, Albert Q and Sablayrolles, Alexandre and Mensch, Arthur and Bamford, Chris and Chaplot, Devendra Singh and Casas, Diego de las and Bressand, Florian and Lengyel, Gianna and Lample, Guillaume and Saulnier, Lucile and others},
+  journal={arXiv preprint arXiv:2310.06825},
+  year={2023}
+}
+
+@article{touvron2023llama,
+  title={Llama 2: Open foundation and fine-tuned chat models},
+  author={Touvron, Hugo and Martin, Louis and Stone, Kevin and Albert, Peter and Almahairi, Amjad and Babaei, Yasmine and Bashlykov, Nikolay and Batra, Soumya and Bhargava, Prajjwal and Bhosale, Shruti and others},
+  journal={arXiv preprint arXiv:2307.09288},
+  year={2023}
+}
+
+@article{liu2023reta,
+  title={RETA-LLM: A Retrieval-Augmented Large Language Model Toolkit},
+  author={Liu, Jiongnan and Jin, Jiajie and Wang, Zihan and Cheng, Jiehan and Dou, Zhicheng and Wen, Ji-Rong},
+  journal={arXiv preprint arXiv:2306.05212},
+  year={2023}
 }
