--- a/paper/acl-style-files/custom.bib
+++ b/paper/acl-style-files/custom.bib
@@ -85,3 +85,27 @@
   journal={arXiv preprint arXiv:2306.05212},
   year={2023}
 }
+
+@article{li2023towards,
+  title={Towards general text embeddings with multi-stage contrastive learning},
+  author={Li, Zehan and Zhang, Xin and Zhang, Yanzhao and Long, Dingkun and Xie, Pengjun and Zhang, Meishan},
+  journal={arXiv preprint arXiv:2308.03281},
+  year={2023}
+}
+
+@article{xia2023sheared,
+  title={Sheared LLaMA: Accelerating Language Model Pre-training via Structured Pruning},
+  author={Xia, Mengzhou and Gao, Tianyu and Zeng, Zhiyuan and Chen, Danqi},
+  journal={arXiv preprint arXiv:2310.06694},
+  year={2023}
+}
+
+@misc{touvron2023llama1,
+      title={LLaMA: Open and Efficient Foundation Language Models}, 
+      author={Hugo Touvron and Thibaut Lavril and Gautier Izacard and Xavier Martinet and Marie-Anne Lachaux and Timothée Lacroix and Baptiste Rozière and Naman Goyal and Eric Hambro and Faisal Azhar and Aurelien Rodriguez and Armand Joulin and Edouard Grave and Guillaume Lample},
+      year={2023},
+      eprint={2302.13971},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
