--- a/paper/acl-style-files/custom.bib
+++ b/paper/acl-style-files/custom.bib
@@ -109,3 +109,25 @@
       primaryClass={cs.CL}
 }
 
+@article{mukherjee2023orca,
+  title={Orca: Progressive learning from complex explanation traces of gpt-4},
+  author={Mukherjee, Subhabrata and Mitra, Arindam and Jawahar, Ganesh and Agarwal, Sahaj and Palangi, Hamid and Awadallah, Ahmed},
+  journal={arXiv preprint arXiv:2306.02707},
+  year={2023}
+}
+
+@article{rafailov2023direct,
+  title={Direct preference optimization: Your language model is secretly a reward model},
+  author={Rafailov, Rafael and Sharma, Archit and Mitchell, Eric and Ermon, Stefano and Manning, Christopher D and Finn, Chelsea},
+  journal={arXiv preprint arXiv:2305.18290},
+  year={2023}
+}
+
+@article{wei2022chain,
+  title={Chain-of-thought prompting elicits reasoning in large language models},
+  author={Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Xia, Fei and Chi, Ed and Le, Quoc V and Zhou, Denny and others},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={24824--24837},
+  year={2022}
+}
